--- a/package.json
+++ b/package.json
@@ -3,13 +3,45 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@progress/kendo-drawing": "^1.10.0",
+    "@progress/kendo-licensing": "^1.1.4",
+    "@progress/kendo-react-buttons": "^4.5.0",
+    "@progress/kendo-react-common": "^4.5.0",
+    "@progress/kendo-react-dateinputs": "^4.5.0",
+    "@progress/kendo-react-dialogs": "^4.5.0",
+    "@progress/kendo-react-dropdowns": "^4.5.0",
+    "@progress/kendo-react-editor": "^4.5.0",
+    "@progress/kendo-react-indicators": "^4.5.0",
+    "@progress/kendo-react-inputs": "^4.5.0",
+    "@progress/kendo-react-intl": "^4.5.0",
+    "@progress/kendo-react-layout": "^4.5.0",
+    "@progress/kendo-react-pdf": "^4.5.0",
+    "@progress/kendo-react-popup": "^4.5.0",
+    "@progress/kendo-react-progressbars": "^4.5.0",
+    "@progress/kendo-react-treeview": "^4.5.0",
+    "@progress/kendo-theme-default": "^4.36.0",
+    "@react-three/drei": "^4.2.0",
+    "@react-three/fiber": "^6.0.16",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "jest-haste-map": "^26.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-html-parser": "^2.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-wordcloud": "^1.2.7",
+    "serve": "^11.3.2",
+    "three": "^0.127.0",
     "web-vitals": "^1.0.1"
+  },
+  "devDependencies": {
+    "babel-plugin-polyfill-corejs2": "^0.2.0",
+    "babel-plugin-polyfill-corejs3": "^0.2.0",
+    "babel-plugin-polyfill-regenerator": "^0.2.0",
+    "react-three-fiber": "^6.0.13"
   },
   "scripts": {
     "start": "react-scripts start",
